# ritm_interactive_segmentation

./: .gitignore  config.yml  pyproject.toml  train.py
isegm/data/datasets/: __init__.py  argos.py  argos_images_dir.py  images_dir.py
models/iter_mask/: hrnet18_argosimages_itermask_3p.py  hrnet18_cocolvis_itermask_3p.py  hrnet18s_images_itermask_3p.py
