[tool.poetry]
name = "ritm_interactive_segmentation"
version = "0.1.0"
description = ""
authors = ["Søren Aagaard Mikkelsen <smi@skov.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
scipy = "^1.8.0"
numpy = "^1.22.2"
Cython = "^0.29.28"
scikit-image = "^0.19.2"
opencv-python-headless = "^4.5.5"
Pillow = "^9.0.1"
imgaug = "^0.4.0"
albumentations = "^1.1.0"
graphviz = "^0.19.1"
tqdm = "^4.62.3"
PyYAML = "^6.0"
easydict = "^1.9"
torch = "^1.10.2"
torchvision = "^0.11.3"
tensorboard = "^2.8.0"
future = "^0.18.2"
cffi = "^1.15.0"
ninja = "^1.10.2"
ipython = "^8.0.1"
setuptools = "59.5.0"
typing-extensions = "^4.1.1"
black = "^22.1.0"
isort = "^5.10.1"

[tool.poetry.dev-dependencies]
ipython = "^8.0.1"

[tool.pyright]

[tool.mypy]
python_version = "3.9.9"
files = "src/**/*.py"
exclude = [".venv", "typings"]
# mypy_path = ["typings/tqdm", "typings/shapely", "typings/bs4", "typings/furl"]
warn_return_any = false
warn_unused_configs = false
ignore_missing_imports = true
plugins = ["pandera.mypy"]

[tool.pyright]
include = ["isegm"]
reportMissingImports = false
reportMissingTypeStubs = false
pythonVersion = "3.9.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
